--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,4 +56,7 @@ en:
   english: "English"
   hungarian: "Hungarian"
   comment: "Comment"
+  rate: "Rate"
+  send: "Send"
+  comments: "Comments"
 
