--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -56,6 +56,9 @@ hu:
   english: "Angol"
   hungarian: "Magyar"
   comment: "Hozzászólás"
+  rate: "Értékelje"
+  send: "Küldés"
+  comments: "Hozzászólások"
   activerecord:
     errors:
       models:
