wishlist added, authentication requires some routes added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -68,4 +68,7 @@ en:
   to_cart: "To cart"
   orders: "Orders"
   order: "Order"
+  to_wishlist: "Add to wishlist"
+  remove_from_wishlist: "Remove from wishlist"
+  wishlist: "Wishlist"
 
