--- a/config/locales/devise.hu.yml
+++ b/config/locales/devise.hu.yml
@@ -14,7 +14,7 @@ hu:
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "Invalid %{authentication_keys} or password."
       timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
+      unauthenticated: "Be kell jelentkezned vagy regisztálnod kell a folytatáshoz."
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
